2010-07-17 20:29  paddockd

	* [r170] ChangeLog, TODO, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c: Added
	  -X/--noexclusive option for WASAPI devices. AKA Shared Mode.
	  Added display of low/high latency info in device listing.
	  Rewrote copyright notice.
	  Increased version to 170.

2010-07-17 18:44  paddockd

	* [r169] ChangeLog, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_http.c, src/squeezeslave/squeezeslave.c:
	  Fixed autostart_threshold calculation in slimaudio_http.c.
	  Increased version to 169.

2010-07-17 18:36  paddockd

	* [r168] ChangeLog, TODO, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added portaudio hostapi name to
	  output device listings.
	  Increases version to 168.

2010-07-17 17:13  paddockd

	* [r167] ChangeLog, TODO, makefile.linux24-alsa-display,
	  makefile.mingw32-asio-display, makefile.mingw32-display,
	  makefile.mingw32-wasapi-display, sources/portaudio-r1526.tar.gz,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Updated windows and linux 2.4
	  makefiles to use PADEV r1526.
	  Use define for framesPerBuffer parameter in Pa_OpenStream call.
	  Increased version to 167.

2010-07-03 11:59  paddockd

	* [r166] ChangeLog, TODO, makefile.linux26-mips-oss,
	  makefile.linux26-mipsel-oss: Renamed makefile.linux26-mips-oss to
	  makefile.linux26-mipsel-oss.

2010-07-03 11:51  paddockd

	* [r165] ChangeLog, TODO, src/slimaudio/slimaudio.c,
	  src/slimaudio/slimaudio_buffer.c,
	  src/slimaudio/slimaudio_decoder.c,
	  src/slimaudio/slimaudio_http.c, src/slimaudio/slimaudio_output.c,
	  src/slimproto/slimproto.c, src/squeezeslave/squeezeslave.c:
	  Renabled pthread_join call in slimproto_destroy for windows
	  builds. Disabled in 0.7.5 after testing revealed it was causing
	  the application to crash on exit.
	  Changed all mutex lock->broadcast->unlock code to
	  lock->unlock->broadcast.
	  Debug messages cleanup.